--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/src/assets/images/logolevelup_1.png" />
+    <link rel="icon" type="image/x-icon" href="/src/assets/images/logolevelupmini.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Level Up</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
